tests/errors/nonlocal_module_level.py
# expect_error: nonlocal declaration not allowed at module level
nonlocal x